fix overflow mobile device

--- a/scss/Layouts/_contact.scss
+++ b/scss/Layouts/_contact.scss
@@ -1,5 +1,5 @@
 .contact {
-  overflow-x: hidden;
+  overflow-x: visible;
   @extend %widthCenter;
   margin-bottom: 100px;
   &_title {
