--- a/scss/Layouts/_project.scss
+++ b/scss/Layouts/_project.scss
@@ -1,5 +1,5 @@
 .project {
-  overflow-x: hidden;
+  overflow-x: visible;
   width: 80%;
   margin: 126px auto;
   &_title {
