--- a/scss/index.css
+++ b/scss/index.css
@@ -452,7 +452,7 @@ body {
   }
 }
 .resume {
-  overflow-x: hidden;
+  overflow-x: visible;
   padding-top: 96px;
   background-color: #FFF;
 }
@@ -673,7 +673,7 @@ hr {
   }
 }
 .project {
-  overflow-x: hidden;
+  overflow-x: visible;
   width: 80%;
   margin: 126px auto;
 }
@@ -788,7 +788,7 @@ hr {
   }
 }
 .contact {
-  overflow-x: hidden;
+  overflow-x: visible;
   margin-bottom: 100px;
 }
 .contact_container {
